# cairo-vm-pipeline

./: .gitignore  .gitmodules  Cargo.toml  README.md  run.sh
bootloader/: execute_task.cairo  main.cairo  run_simple_bootloader.cairo  select_builtins.cairo  select_input_builtins.cairo  simple_bootloader.cairo
cairo-verifier-runner/: Cargo.toml
cairo-verifier-runner/src/: main.rs
resources/: cpu_air_params.json  cpu_air_prover_config.json  main.cairo  verify.cairo
runner/: Cargo.toml
runner/src/: main.rs
scripts/: 1-compile.sh  2-run.sh  bootloader.sh  build.sh  cairo-verify.sh  cairo-vm.sh  cairo-zero-parsed-verify.sh  cairo-zero-verify.sh  cleanup.sh  compile.sh  generate-bootloader-input.py  generate-inputs.py  generate-verify-input.py  parse.sh  prove.sh  run.sh  stone-prove.sh  stone-verify.sh  verify.sh
src/: main.rs
