[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
cairo-args-runner = "1.0.1"
cairo-felt = "0.9.1"
cairo-lang-runner = "2.5.4"
cairo-lang-sierra = "2.5.4"
cairo-lang-utils = "2.5.4"
cairo-proof-parser = { git = "https://github.com/Okm165/cairo-proof-parser" }
cairo-vm = "0.9.2"
clap = { version = "4.5.1", features = ["derive"] }
itertools = "0.12.1"
num-bigint = "0.4.4"
prefix-hex = "0.7.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
